# boolean_nca_cc

./: .gitignore  CircuitViz.py  GUI.py  GUI_for_notebook.py  LICENSE  README.md  README_safe_train.md  Random_boolean_circuit.ini  boolean_nca_cc.code-workspace  cascade_demo.py  copy_of_random_boolean_nets.py  debug_extraction.py  debug_scan.py  debug_seu_recovery.py  environment.yml  environment_export.txt  environment_setup_guide.md  example.py  example_normality_test.py  final_results.csv  fixed_random_wires_demo.py  gnn.py  gnn_final_state.pkl  gnn_results.pkl  gnn_visualizer.py  graph.py  graph_old.py  logit_monitor.py  model.py  pool_update_calculator.py  profile_sequential_batching.py  pyproject.toml  random_boolean_nets.ipynb  random_wires_demo.py  requirements.txt  requirements_full.txt  requirementx.txt  safe_train.py  sanity_seu_flip_test.py  simple_fixed_demo.py  (+23 more)
.cursor/rules/: environment.mdc
BP sweep/: README.md  requirements.txt  run_agents.py  run_study.py  start_sweep.sh  sweep_agent.py  sweep_id.txt  sweep_init.py  train_single.py  wandb_sweep_config.yaml
BP sweep/configs/: config.yaml
BP sweep/configs/cross_validation/: kfold.yaml  (+1 more)
artifacts/best_model_hard_accuracy:v120/: best_model_hard_accuracy.pkl
boolean_nca_cc/: __init__.py
boolean_nca_cc/analysis/: hamming_distance.py  visualization.py
boolean_nca_cc/circuits/: cascade_demo.py  fixed_random_wires_demo.py  model.py  tasks.py  train.py  training.py  viz.py
boolean_nca_cc/models/: __init__.py  aggregation.py  edge_update.py  gnn.py  node_update.py  self_attention.py
boolean_nca_cc/training/: __init__.py  attn_train_loop.py  attn_train_step.py  backprop.py  checkpointing.py  eval_datasets.py  evaluation.py  knockout_eval.py  perturbation.py  pool.py  pool_train_loop.py  preconfigure.py  profiling.py  schedulers.py  train_loop.py  train_step.py  utils.py
boolean_nca_cc/utils/: __init__.py  configured_graph_builder.py  extraction.py  flax_compatibility.py  graph_builder.py  pool_stats.py  positional_encoding.py  trees.py
checkpoints/: checkpoint_64.pkl
configs/: config.yaml  genetic_test.yaml
configs/model/: _base.yaml  gnn.yaml  self_attention.yaml
demos/: fixed_random_wires_demo.py
diagrams/: README.md  gnn_architecture.py  graph_construction.py  meta_learning_diagram_final.py  plot_positional_encodings.py  self_attention_architecture.py
docs/: SEU_strategy.md  Sequential_eval.md  Simple_SEU.md  analysis.md  analysis_buffer.md  backup_analysis.md  baseline_evaluation_framework.md  bp_vs_sa.md  cherry_pick_SEU_sequence_github.md  dataset_collection_strategy.md  design_doc_ko_selfatt.md  gradient_masking.md  hamming_analysis.md  knockout_pattern_vocabulary_implementation.md  old_redesign_kos.md  paddingdoc.md  pertrubGUI.md  phase2_samplezeros  reconfiguration_training_strategy.md  redesign_kos.md  sample_based_damage.md  test_strategy.md  testing_suite_results.md  testing_suite_summary.md  visualization_strategy.md  wandb_sweep_cleanup_guide.md
examples/: knockout_backprop_example.py  random_demo.py  train_GNCA.py  utils.py
examples/gnn/: demo.py  eval.py  train.py
examples/gui/: demo.py
examples/guis/: GNCA.py  direct.py
examples/train/: train_graphNCA.py  train_graphNCA_pool.py  train_pool.py
experiments/: greedy_damage_selection.py  hamming_distance.py  knockout_lut_distance.py  single_gate_damage_sweep.py
experiments/visualization/: __init__.py  circular_plot.py  create_combined_plot.py  example_figure3_standalone.py  figure1_training_progress.py  figure2_damage_vs_exposure.py  figure3_standalone_checkpoint.py
gnn_checkpoints/epoch_32768.orbax-checkpoint-tmp-0/: _CHECKPOINT_METADATA
normality_test_results/: normality_summary.csv  normality_test_results.json
old_code/: old_config.yaml  old_train.py
old_docs/: paddingdoc.md  test_strategy.md  testing_suite_results.md
reports/single_gate_analysis/: damage_analysis_results.csv
reports/single_gate_analysis_1000/: damage_analysis_results.csv
results/knockout_lut_distance/: pairwise_matrix.csv  report.json  summary.csv
results/knockout_lut_distance_vocab128_damage10.0/: pairwise_matrix.csv  report.json  summary.csv
results/knockout_lut_distance_vocab128_damage20.0/: pairwise_matrix.csv  report.json  summary.csv
results/knockout_lut_distance_vocab128_damage40.0/: pairwise_matrix.csv  report.json  summary.csv
results/knockout_lut_distance_vocab16_damage40.0/: pairwise_matrix.csv  report.json  summary.csv
results/knockout_lut_distance_vocab32_damage20.0/: pairwise_matrix.csv  report.json  summary.csv
results/knockout_lut_distance_vocab512_damage1.0/: report.json  summary.csv
results/knockout_lut_distance_vocab512_damage10.0/: report.json  summary.csv
results/knockout_lut_distance_vocab512_damage40.0/: report.json  summary.csv
sweeps/: README.md  hsm_config.yaml  sweep.yaml
test_output_bp/: pairwise_matrix.csv  report.json  summary.csv
tests/: test_4_1_attention_masking.py  test_6_1_phase1_test3_batch_processing_integration.py  test_complete_knockout_flow.py  test_diversity.py  test_diversity_measure.py  test_feature_zeroing.py  test_gradient_fix.py  test_initial_diversity.py  test_level_1_1_boolean_circuit_operations.py  test_level_1_2_loss_function_infrastructure.py  test_level_2_1_graph_construction.py  test_level_2_2_graph_circuit_conversion.py  test_level_3_1_pattern_generation.py  test_level_3_2_pattern_application.py  test_level_4_2_model_state_updates.py  test_level_5_1_pool_knockout_operations.py  test_level_6_1_phase_1_test_1_core_training_step_integration.py  test_level_6_1_phase_1_test_2_knockout_pipeline_integration.py  test_level_6_1_phase_1_test_3_batch_processing_integration.py  test_multi_step_gradients.py  test_pool_damage_reset.py  test_seu_schedule_injection.py  testing_suite_results.md
tests/knockout/: PERFORMANCE_OPTIMIZATION.md  README.md  test_gate_knockout.py  test_gradient_masking.py
tests/knockouts/: demo_knockouts.py  test_knockouts.py
vsml-neurips2021-main/: experiment.py  launch.py  models.py  mpiutils.py  recurrent.py  test_imports.py  vsml_layers.py
(+255 files in other folders)
