[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boolean_nca_cc"
version = "0.1.0"
description = "Optimizing boolean circuits using graph neural networks"
readme = "README.md"
authors = [
    {name = "Boolean NCA Team", email = "author@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    # Core JAX ecosystem
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "jraph>=0.0.6.dev0",
    
    # Scientific computing
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    
    # Configuration and experiment management
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    
    # Progress bars and utilities
    "tqdm>=4.64.0",
    
    # Image processing and visualization
    "Pillow>=9.0.0",
    "imgui-bundle>=1.0.0",
    
    # Interactive development
    "IPython>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]
all = [
    # Include all dev dependencies
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
    # Include all notebook dependencies
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/boolean_nca_cc"
"Bug Tracker" = "https://github.com/yourusername/boolean_nca_cc/issues"
"Documentation" = "https://github.com/yourusername/boolean_nca_cc#readme"

[tool.setuptools]
packages = ["boolean_nca_cc"]

[tool.setuptools.package-data]
boolean_nca_cc = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["jax.*", "jraph.*", "flax.*", "optax.*", "tqdm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=boolean_nca_cc" 